update slides to include GitHub repo link

--- a/slides.html
+++ b/slides.html
@@ -1525,6 +1525,10 @@ u32
 <li><a href="https://towardsdatascience.com/tips-and-tricks-for-working-with-strings-in-polars-ec6bb74aeec2">Tips &amp; tricks for working with strings in Polars</a></li>
 <li><a href="https://airbyte.com/blog/pandas-2-0-ecosystem-arrow-polars-duckdb">Pnadas 2.0 and its ecosystem - Arrow, Polars &amp; DuckDB</a></li>
 </ul>
+</section>
+<section id="lab" class="slide level2">
+<h2>Lab</h2>
+<p><a href="https://github.com/aarora79/polars-demo">https://github.com/aarora79/polars-demo</a></p>
 <div class="footer footer-default">
 
 </div>
